--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,13 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
-
+circleimageview = "3.1.0"
+circularstatusview = "V1.0.3"
+glide = "4.16.0"
+whynotimagecarousel = "2.1.0"
+exoplayer = "2.18.2"
+kotlin = "2.1.20"
+coreKtx = "1.16.0"
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -16,7 +22,13 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-
+circleimageview = { group = "de.hdodenhof", name = "circleimageview", version.ref = "circleimageview" }
+circularstatusview = { group = "com.github.3llomi", name = "circularstatusview", version.ref = "circularstatusview" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+whynotimagecarousel = { group = "org.imaginativeworld.whynotimagecarousel", name = "whynotimagecarousel", version.ref = "whynotimagecarousel" }
+exoplayer = { group = "com.google.android.exoplayer", name = "exoplayer", version.ref = "exoplayer" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
